--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
-    "builds":[{
-        "src":"project/wsgi.py",
-        "use":"@vercel/python",
-        "config":{"maxLambdaSize":"15mb","runtime":"python3.9"}
+    "builds": [{
+        "src": "project/wsgi.py",
+        "use": "@vercel/python",
+        "config": {
+            "maxLambdaSize": "15mb",
+            "runtime": "python3.9"
+        }
     }],
-    "routes":[
+    "routes": [
         {
-            "scr":"/(.*)",
-            "dest":"project/wsgi.py"
+            "src": "/(.*)",
+            "dest": "project/wsgi.py"
         }
     ]
 }
